<resources>
    <string name="app_name">WanAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_like">My favorite</string>
    <string name="my_about">About us</string>
    <string name="browser_shared_element">browser_shared_element</string>
    <string name="tab_home">首页</string>
    <string name="tab_know">知识体系</string>
    <string name="tab_me">我</string>
    <string name="sign_up">注册</string>
    <string name="dn_login_action">登陆</string>
    <string name="login_title">登陆到 WanAndroid</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_username">请输入账号</string>
    <string name="hint_password">请输入密码</string>
    <string name="password_confirm_not_empty">确认密码不能为空</string>
    <string name="password_confirm_diff">确认密码不相同</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="password_length_short">密码长度不能小于6位</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="sign_success">注册成功，欢迎你的使用</string>

    <string name="search_title">搜索</string>
    <string name="hot_title">Hot</string>

    <string name="search_hint">请输入要搜索的内容</string>
    <string name="transition_search_back">transition_search_back</string>
    <string name="transition_hot_back">transition_hot_back</string>
    <string name="splash">DingLei</string>
    <string name="transition_reveal">transition_reveal</string>
    <string name="double_click_exit">再按一次退出</string>
    <string name="no_search_results">没有搜索到结果\n“%1$s”</string>
    <string name="share_title">分享</string>
    <string name="browser_open">用浏览器打开</string>
    <string name="hot_search">大家都在搜</string>
    <string name="hot_common">常用网站</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
