<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="@dimen/spacing_large"
    android:layout_marginStart="@dimen/spacing_large"
    android:background="@drawable/dialog_background"
    android:clickable="true"
    android:elevation="@dimen/z_fab"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_normal"
    android:paddingEnd="@dimen/padding_dialog"
    android:paddingStart="@dimen/padding_normal"
    android:paddingTop="@dimen/padding_dialog"
    android:transitionName="@string/dn_login_action">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_micro"
        android:text="@string/login_title"
        android:textColor="@color/qmui_config_color_75_pure_black"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_micro"
                app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_micro"
                app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/actions_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal">

                <Button
                    android:id="@+id/signup"
                    style="?android:borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/sign_up"
                    android:textColor="?android:colorAccent" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:enabled="false"
                    android:text="@string/dn_login_action"
                    android:textAppearance="@style/TextAppearance.DarkButton" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_huge"
        android:indeterminate="true"
        android:indeterminateTint="@color/grey_300"
        android:indeterminateTintMode="src_in"
        android:visibility="gone" />

</LinearLayout>
